# cpp-ray-tracer-challenge

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  Matrix.hpp  RayTracer.hpp  RayTracerPCH.cpp  RayTracerPCH.hpp  Tuple.cpp  Tuple.hpp  stdafx.hpp
lib/Math/: Constants.hpp  Matrix.hpp  Transformations.hpp  Tuple.cpp  Tuple.hpp
lib/RayTracer/Core/: Assertions.hpp
lib/RayTracer/Math/: Constants.hpp  Matrix.hpp  Transformations.hpp  Tuple.cpp  Tuple.hpp
lib/RayTracer/Profiling/: TrackCalls.hpp  TrackNew.hpp  TrackTime.hpp
lib/RayTracer/Rendering/: Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp
lib/RayTracer/Rendering/Camera/: Camera.cpp  Camera.hpp
lib/RayTracer/Rendering/Cameras/: Camera.cpp  Camera.hpp
lib/RayTracer/Rendering/Lighting/: Computations.cpp  Computations.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Ray.cpp  Ray.hpp
lib/RayTracer/Rendering/Materials/: Material.cpp  Material.hpp
lib/RayTracer/Rendering/Parsers/: OBJParser.cpp  OBJParser.hpp
lib/RayTracer/Rendering/Patterns/: BlendedPattern.cpp  BlendedPattern.hpp  CheckersPattern.cpp  CheckersPattern.hpp  GradientPattern.cpp  GradientPattern.hpp  NestedPattern.cpp  NestedPattern.hpp  Pattern.cpp  Pattern.hpp  PerturbedPattern.cpp  PerturbedPattern.hpp  RadialGradientPattern.cpp  RadialGradientPattern.hpp  RingPattern.cpp  RingPattern.hpp  SolidColorPattern.cpp  SolidColorPattern.hpp  StripePattern.cpp  StripePattern.hpp
lib/RayTracer/Rendering/Primitives/: BoundingBox.cpp  BoundingBox.hpp  CSG.cpp  CSG.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Group.cpp  Group.hpp  Plane.cpp  Plane.hpp  Shape.cpp  Shape.hpp  SmoothTriangle.cpp  SmoothTriangle.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
lib/RayTracer/Rendering/RayTracing/: Computations.cpp  Computations.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp
lib/RayTracer/Rendering/Scene/: World.cpp  World.hpp
lib/RayTracer/Utils/: OBJFile.hpp  PPMFile.hpp  Print.hpp
lib/Rendering/: Canvas.cpp  Canvas.hpp
lib/Rendering/Camera/: Camera.cpp  Camera.hpp
lib/Rendering/RayTracing/: Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp
lib/Rendering/Scene/: World.cpp  World.hpp
lib/Utils/: PPMFile.hpp  Print.hpp
samples/: CMakeLists.txt  TechDemo.cpp
samples/Chapter02/: CMakeLists.txt  Environment.cpp  Environment.hpp  Projectile.cpp  Projectile.hpp  main.cpp
samples/Chapter04/: CMakeLists.txt  main.cpp
samples/Chapter05/: CMakeLists.txt  main.cpp
samples/Chapter06/: CMakeLists.txt  main.cpp
samples/Chapter07/: CMakeLists.txt  Sample07.cpp  main.cpp
samples/Chapter08/: CMakeLists.txt  main.cpp
samples/Chapter09/: CMakeLists.txt  main.cpp
samples/Chapter10/: CMakeLists.txt  main.cpp
samples/Chapter14/: CMakeLists.txt  main.cpp
samples/ClockDemo/: CMakeLists.txt
samples/ProjectileDemo/: CMakeLists.txt
samples/SilhouetteDemo/: CMakeLists.txt  SilhouetteDemo.cpp
samples/Sphere3DDemo/: CMakeLists.txt  Sphere3DDemo.cpp
src/: CMakeLists.txt  Environment.cpp  Environment.hpp  Projectile.cpp  Projectile.hpp  ProjectileDemo.cpp  TechDemo.cpp
tests/: CMakeLists.txt  CameraTests.cpp  CanvasATests.cpp  IntersectionTests.cpp  LightTests.cpp  MaterialTests.cpp  MatrixTests.cpp  RayTests.cpp  SphereTests.cpp  TransformationsTests.cpp  TupleTests.cpp  WorldTests.cpp
tests/AcceptanceTests/: BoundingBoxTests.cpp  CMakeLists.txt  CSGTests.cpp  CameraTests.cpp  CanvasATests.cpp  ColorTests.cpp  ConeTests.cpp  CubeTests.cpp  CylinderTests.cpp  GroupTests.cpp  IntersectionTests.cpp  LightTests.cpp  MaterialTests.cpp  MatrixTests.cpp  OBJParserTests.cpp  PatternTests.cpp  PlaneTests.cpp  RayTests.cpp  ShapeTests.cpp  SmoothTriangleTests.cpp  SphereTests.cpp  TestShape.hpp  TransformationsTests.cpp  TriangleTests.cpp  TupleTests.cpp  WorldTests.cpp  main.cpp
tests/UnitTests/: CMakeLists.txt  TupleTests.cpp
